2015-05-20  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/Makefile.am: Missing \

2015-05-20  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/Makefile.in, rest-server/Makefile,
	  rest-server/lib/Amanda/Rest.pm, rest-server/bin/app-dancer2.pl,
	  rest-server/bin/app.pl: Remove files.

2015-05-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Fix.

2015-05-20  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/*: Moved the rest-server
	* Makefile.am (SUBDIRS): Add rest-server
	* configure.in (AC_CONFIG_FILES): add rest-server/Makefile
	* server-src/amanda-rest-server.pl: Add --dancer and --dancer2 option.

2015-05-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server_and_die): Always FAILURE

2015-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h: Add CNF_REST_SSL_CERT and CNF_REST_SSL_KEY
	* common-src/conffile.c: Parse rest-ssl-cert and rest-ssl-key
	* perl/Amanda/Config.swg: Add CNF_REST_SSL_CERT and CNF_REST_SSL_KEY
	* server-src/amanda-rest-server.pl: Start the REST server with
	  '--enable-ssl --ssl-cert $ssl_cert --ssl-key $ssl_key' if
	  CNF_REST_SSL_CERT and CNF_REST_SSL_KEY are set.
	* man/xml-so: Document the rest-api-port, rest-ssl-cert and
	  rest-ssl-key setting form /etc/amanda/amanda.conf

2015-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/FetchDump.pm: Do not pass a changer
	* perl/Amanda/Recovery/Planner.pm (make_plan): Accept storage instead
	  of changer
	* perl/Amanda/Vault.pm: Use src_storage_name and dest_storage_name
	* server-src/amvault.pl: Add --src-storage and --dest-storage
	  arguments
	* man/xml-source/amvault.8.xml: Document --src-storage and
	  --dest-storage
	* installcheck/Amanda_Recovery_Planner.pl: Fix for new api

2015-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Parse 'requeue write' line, set storage
	  will_retry.